ci: fix misspelling so that only xtest is run
The "make check" command line should pass "CHECK_TESTS=xtest" to run
only xtest (and exclude the other tests: trusted-keys and rust), which
was the intent in commit 0ce8f915e651 ("github: add CI workflow").
Fix the misspelling so that it really happens.

Signed-off-by: Jerome Forissier <jerome.forissier@linaro.org>
Acked-by: Jens Wiklander <jens.wiklander@linaro.org>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,4 +37,4 @@ jobs:
           ln -s ${OPTEE_FTPM_TO_TEST} ${TOP}/optee_ftpm
           cd ${TOP}/build
 
-          make -j$(nproc) check MEASURED_BOOT_FTPM=y CHECK_TEST=xtest XTEST_ARGS=regression_1041
+          make -j$(nproc) check MEASURED_BOOT_FTPM=y CHECK_TESTS=xtest XTEST_ARGS=regression_1041
